--- a/src/index.css
+++ b/src/index.css
@@ -65,4 +65,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+
+#subButton {
+  background-color: darkgoldenrod;
+  font-size: larger
+  ;
+}
 }
