--- a/src/index.css
+++ b/src/index.css
@@ -71,4 +71,17 @@ button:focus-visible {
   font-size: larger
   ;
 }
+
+#subButton2 {
+  background-color:  gold;
+  border: cornflowerblue;
+  color: darkgreen;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; 
+}
+
+
 }
